about reusable component and maps function

--- a/index.css
+++ b/index.css
@@ -26,10 +26,25 @@
 
 .restro-card {
   width: 200px;
-  height: 300px;
-  border: 1px solid black;
+  padding: 5px;
 }
 
 .search {
   padding: 10px;
+}
+
+.restro-img {
+  width: 100%;
+}
+
+.restro-card:hover {
+  background: #e1e1e1;
+  border: 1px solid #d0d0d0;
+  cursor: pointer;
+}
+
+.restro-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 5px;
 }
